--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,6 @@
     "angular-route": "~1.3.15",
     "angular-animate": "~1.3.15",
     "materialize": "~0.96.1",
-    "jquery": "~2.1.4",
-    "requirejs": "~2.1.17"
+    "jquery": "~2.1.4"
   }
 }
