--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Brymastr/Ulam-Spiral/issues"
   },
-  "homepage": "https://github.com/Brymastr/Ulam-Spiral"
+  "homepage": "https://github.com/Brymastr/Ulam-Spiral",
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1"
+  }
 }
