--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Brymastr/Ulam-Spiral",
   "dependencies": {
+    "express": "^4.12.3",
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1"
   }
