--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -33,7 +33,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Install
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run build
