updated samconfig with new dev hostedzoneid

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -7,4 +7,4 @@ s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-9hep6u2wm2mb"
 s3_prefix = "prime-spiral"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "HostedZoneId=\"Z07049331HHRI0OG4G1H4\" DomainName=\"spiral.dorsay.dev\""
+parameter_overrides = "HostedZoneId=\"Z05558683FC949RPHCKBP\" DomainName=\"spiral.dorsay.dev\""
